fix: wp-block margin issue on smaller screens
when the right side menu is open on smaller screens, wp-block could have a negative on the margin on the left. Now "fixed" by setting the query + 280 px (the width of the side panel).

--- a/assets/child-theme-editor/styles/index.scss
+++ b/assets/child-theme-editor/styles/index.scss
@@ -142,7 +142,7 @@ body.post-type-post {
     .wp-block {
       max-width: 721.5px;
 
-      @media (min-width: 1200px) {
+      @media (min-width: 1480px) {
         margin-left: calc( (100% / 2) - 360.75px - (388.5px / 2) );
       }
     }
